add task-btn change

--- a/board.html
+++ b/board.html
@@ -35,8 +35,13 @@
                     <img class="search-bar-line" src="./asssets/img/searchBar line.svg" alt="">
                     <img class="search-icon" src="./asssets/img/search-icon.svg" alt="">
                 </div>
+                <div class="button-add-div">
+                    <span>Add task</span>
+                    <img src="./asssets/img/plus-svg.svg" alt="plus icon">
+                  </div>
             
-                <div onmouseover="changeimage(this)" onmouseout="restoreimage(this)"><img id="edit-secondBtn-hover" class="edit-secondBtn" src="./asssets/img/responsiv-addBTN.svg" alt=""></div>
+                <!-- <div onmouseover="changeimage(this)" onmouseout="restoreimage(this)"><img id="edit-secondBtn-hover" class="edit-secondBtn" src="./asssets/img/add-button.png" alt=""></div> -->
+                
             </div>
         </div>
 
