--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="./asssets/css/cover_page.css">
-    <link rel="icon" type="image/x-icon" href="./img/mobile-login-logo-dark.svg">
+    <link rel="icon" type="image/x-icon" href="./asssets/img/mobile-login-logo-dark.svg">
     <link rel="stylesheet" href="./asssets/css/mobile-login.css">
     <link rel="shortcut icon" href="./asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
 
@@ -57,8 +57,8 @@
                     </div>
             </form>
             <div class="guest-btn-container">
-                <a href="./guest_hello.html"><button type="button" onclick="guestLogin()" class="guest-btn">Guest Log
-                        in</button></a>
+                <button type="button" onclick="guestLogin()" class="guest-btn">Guest Log
+                        in</button>
             </div>
         </div>
     </div>
