ad_task popup updated

--- a/board.html
+++ b/board.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="asssets/css/add_task_popUp.css">
     <script src="js/footer.js"></script>
     <script src="./js/board.js"></script>
+    <script src="./js/add_task_popup.js"></script>
     <title>Board</title>
 </head>
 <body onload="init()">
@@ -189,10 +190,9 @@
 
     <!-------------------- Add Task popUp----------------------->
     <div class="popup-overlay">
-        <div class="popup-content id="popupContent"">
+        <div class="popup-content" id="popupContent">
             <div class="wrapper">
                 <div class="site-title">
-                    <p>Kanban Project Management Tool</p>
                      <h1>Add Task</h1>
                 </div>
                 
