--- a/guest_hello.html
+++ b/guest_hello.html
@@ -9,13 +9,13 @@
     <link rel="shortcut icon" href="./asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
     <link rel="stylesheet" href="./asssets/css/footer.css">
     <link rel="stylesheet" href="./asssets/css/guest_hello.css">
+    <script src="./js/header_include.js"></script>
 </head>
-<body onload="loadSummary()">
+<body id="guest-hello" class="page show" onload="loadSummary()">
     <div w3-header-include-html="./asssets/templates/header.html"></div>
     <div class="content">
         <h1>Good morning</h1>
     </div>
     <footer w3-footer-include-html="./asssets/templates/footer.html"></footer>
-    <script src="./js/header_include.js"></script>
 </body>
 </html>
