--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/x-icon" href="./asssets/img/mobile-login-logo-dark.svg">
     <link rel="stylesheet" href="./asssets/css/mobile-login.css">
     <link rel="shortcut icon" href="./asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
+    <script src="js/header_include.js"></script>
 
 
 </head>
