--- a/board.html
+++ b/board.html
@@ -192,7 +192,27 @@
             </div>
         </div>
     </div>
-    <footer w3-footer-include-html="/asssets/templates/footer.html"></footer>
+    <footer>
+        <footer>
+            <div id="summary-div" class="icon-container summary">
+                <a href="./summary.html"><img class="icon" src="./asssets/img/Summary_icon_grey.svg" alt=""></a>
+                 <a href="./summary.html"><span>Summary</span></a>
+             </div>
+             <div id="board-div" class="icon-container" style="background-color: #091931; height: 87%;">
+                 <a href="./board.html"><img class="icon" src="./asssets/img/Board_icon.svg" alt=""></a>
+                 <a href="./board.html"><span>Board</span></a>
+             </div>
+             <div id="add-task-div" class="icon-container">
+                 <a href="./add_task.html"><img class="add-task-icon" src="./asssets/img/Add_Task_icon.svg" alt=""></a>
+                 <a href="./add_task.html"><span>Add Task</span></a>
+             </div>
+             <div id="contacts-div" class="icon-container">
+                 <a href="./contacts.html"><img class="icon-contacts" src="./asssets/img/Contacts.svg" alt=""></a>
+                 <a href="./contacts.html"><span>Contacts</span></a>
+             </div>
+        </footer>
+    </footer>
+    <!-- <footer w3-footer-include-html="/asssets/templates/footer.html"></footer> -->
     <script src="js/header_include.js"></script>
 </body>
 </html>
