--- a/contacts.html
+++ b/contacts.html
@@ -14,6 +14,7 @@
     <link rel="shortcut icon" href="./asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
     <link rel="stylesheet" href="./asssets/css/footer.css">
     <script src="./contacts.js"></script>
+    <script src="./js/footer.js"></script>
 </head>
 
 <body onload="init()">
@@ -239,7 +240,25 @@
             </div>
         </div>
     </div>
-    <footer w3-footer-include-html="./asssets/templates/footer.html"></footer>
+    <!-- <footer w3-footer-include-html="./asssets/templates/footer.html"></footer> -->
+    <footer>
+        <div id="summary-div" class="icon-container summary">
+            <a href="./summary.html"><img class="icon" src="./asssets/img/Summary_icon_grey.svg" alt=""></a>
+             <a href="./summary.html"><span>Summary</span></a>
+         </div>
+         <div id="board-div" class="icon-container">
+             <a href="./board.html"><img class="icon" src="./asssets/img/Board_icon.svg" alt=""></a>
+             <a href="./board.html"><span>Board</span></a>
+         </div>
+         <div id="add-task-div" class="icon-container">
+             <a href="./add_task.html"><img class="add-task-icon" src="./asssets/img/Add_Task_icon.svg" alt=""></a>
+             <a href="./add_task.html"><span>Add Task</span></a>
+         </div>
+         <div id="contacts-div" class="icon-container" style="background-color: #091931; height: 87%;">
+             <a href="./contacts.html"><img class="icon-contacts" src="./asssets/img/Contacts.svg" alt=""></a>
+             <a href="./contacts.html"><span>Contacts</span></a>
+         </div>
+    </footer>
     <script src="./js/header_include.js"></script>
 </body>
 
