--- a/add_task.html
+++ b/add_task.html
@@ -148,8 +148,8 @@
            <a href="./board.html"><span>Board</span></a>
        </div>
        <div id="add-task-div" class="icon-container" style="background-color: #091931; height: 87%;">
-           <a href="./add_task.html"><img class="add-task-icon" src="./asssets/img/Add_Task_icon.svg" alt=""></a>
-           <a href="./add_task.html"><span>Add Task</span></a>
+           <a href="./add_task.html"><img class="add-task-icon" src="./asssets/img/add_Task_icon_white.svg" alt=""></a>
+           <a href="./add_task.html"><span style="color: white">Add Task</span></a>
        </div>
        <div id="contacts-div" class="icon-container">
            <a href="./contacts.html"><img class="icon-contacts" src="./asssets/img/Contacts.svg" alt=""></a>
