--- a/contacts.html
+++ b/contacts.html
@@ -255,8 +255,8 @@
              <a href="./add_task.html"><span>Add Task</span></a>
          </div>
          <div id="contacts-div" class="icon-container" style="background-color: #091931; height: 87%;">
-             <a href="./contacts.html"><img class="icon-contacts" src="./asssets/img/Contacts.svg" alt=""></a>
-             <a href="./contacts.html"><span>Contacts</span></a>
+             <a href="./contacts.html"><img class="icon-contacts" src="./asssets/img/contacts_icon_white.svg" alt=""></a>
+             <a href="./contacts.html"><span style="color: white">Contacts</span></a>
          </div>
     </footer>
     <script src="./js/header_include.js"></script>
