--- a/guest_hello.html
+++ b/guest_hello.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="./asssets/css/guest_hello.css">
     <script src="./js/header_include.js"></script>
 </head>
-<body id="guest-hello" class="page show" onload="loadSummary()">
+<body onload="loadSummary()">
     <div w3-header-include-html="./asssets/templates/header.html"></div>
-    <div class="content">
+    <div  id="guest-hello" class="page show content">
         <h1>Good morning</h1>
     </div>
     <footer w3-footer-include-html="./asssets/templates/footer.html"></footer>
