--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="./asssets/css/cover_page.css">
+
     <link rel="icon" type="image/x-icon" href="./asssets/img/mobile-login-logo-dark.svg">
     <link rel="stylesheet" href="./asssets/css/mobile-login.css">
     <link rel="shortcut icon" href="./asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./asssets/css/footer.css">
+    <link rel="stylesheet" href="./asssets/css/guest_hello.css">
     <script src="js/header_include.js"></script>
 
 
