--- a/summary.html
+++ b/summary.html
@@ -87,8 +87,8 @@
     </div>
     <footer>
         <div id="summary-div" class="icon-container summary" style="background-color: #091931; height: 87%;">
-            <a href="./summary.html"><img class="icon" src="./asssets/img/Summary_icon_grey.svg" alt=""></a>
-             <a href="./summary.html"><span>Summary</span></a>
+            <a href="./summary.html"><img class="icon" src="./asssets/img/Summary_icon_white.svg" alt=""></a>
+             <a href="./summary.html"><span style="color: white">Summary</span></a>
          </div>
          <div id="board-div" class="icon-container">
              <a href="./board.html"><img class="icon" src="./asssets/img/Board_icon.svg" alt=""></a>
