--- a/board.html
+++ b/board.html
@@ -65,7 +65,7 @@
 
                 
 
-                <div class="list" ondrop="drop(event)" ondragover="allowDrop(event)" ondragenter="dragEnter(event, this)" ondragleave="dragLeave(event, this)" id="task-card" >
+                <div class="list" id="todo-card">
                     
                 <!-- <div class="task-card card-with-PBar"> -->
                     <!-- <div class="task-category orange">Design</div>
@@ -101,7 +101,7 @@
                     <div onmouseover="changePenimage(this)" onmouseout="restorePenimage(this)"><img id="add-card" src="./asssets/img/add-card.svg" alt=""></div>
                 </div>
 
-                <div class="list" ondrop="drop(event)" ondragover="allowDrop(event)" ondragenter="dragEnter(event, this)" ondragleave="dragLeave(event, this)">
+                <div class="list" id="progress-card">
                 <div class="task-card">
 
                     <div class="task-category pink">Sales</div>
@@ -131,7 +131,7 @@
                     <div class="head-title">Awaiting Feedback</div>
                     <div onmouseover="changePenimage(this)" onmouseout="restorePenimage(this)"><img id="add-card" src="./asssets/img/add-card.svg" alt=""></div>
                 </div>
-                <div class="list" ondrop="drop(event)" ondragover="allowDrop(event)" ondragenter="dragEnter(event, this)" ondragleave="dragLeave(event, this)">
+                <div class="list" id="Feedback-card">
                 <div class="task-card">
 
                     <div class="task-category light-green">Backoffice</div>
@@ -162,7 +162,7 @@
                     <div onmouseover="changePenimage(this)" onmouseout="restorePenimage(this)"><img id="add-card" src="./asssets/img/add-card.svg" alt=""></div>
                 </div>
 
-                <div class="list" ondrop="drop(event)" ondragover="allowDrop(event)" ondragenter="dragEnter(event, this)" ondragleave="dragLeave(event, this)">
+                <div class="list" id="done-card">
                 <div class="task-card card-with-PBar">
 
                     <div class="task-category blue">Marketing</div>
